--- a/materials/day1/day1.ipynb
+++ b/materials/day1/day1.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Day 1: Introduction\n",
+    "# Module 1: Introduction\n",
     "\n",
     "We talked today about the massive transformation that electricity markets are witnessing, with the rapid growth of renewable power and explicity goal of fully decarbonizing the electricity market in coming years.\n",
     "\n",
@@ -23,12 +23,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General.toml`\n",
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m   Installed\u001b[22m\u001b[39m RegressionTables ─ v0.7.8\n",
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.10/Project.toml`\n",
+      "  \u001b[90m[d519eb52] \u001b[39m\u001b[92m+ RegressionTables v0.7.8\u001b[39m\n",
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.10/Manifest.toml`\n",
+      "  \u001b[90m[d519eb52] \u001b[39m\u001b[92m+ RegressionTables v0.7.8\u001b[39m\n",
+      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m project...\n",
+      "\u001b[32m  ✓ \u001b[39mRegressionTables\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mRegressionTables → RegressionTablesFixedEffectModelsExt\u001b[39m\n",
+      "  2 dependencies successfully precompiled in 5 seconds. 273 already precompiled.\n"
+     ]
+    }
+   ],
    "source": [
     "using Pkg\n",
-    "# Pkg.add([\"Binscatters\", \"CSV\", \"DataFrames\", \"Statistics\", \"Plots\", \"FixedEffectModels\", \"RegressionTables\"])\n"
+    "Pkg.add([\"Binscatters\", \"CSV\", \"DataFrames\", \"Statistics\", \"Plots\", \"FixedEffectModels\", \"RegressionTables\"])"
    ]
   },
   {
@@ -42,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +70,7 @@
     "using Statistics\n",
     "using Plots\n",
     "using FixedEffectModels\n",
-    "using RegressionTables\n",
-    "\n"
+    "using RegressionTables"
    ]
   },
   {
@@ -69,7 +86,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd(\"G:/.shortcut-targets-by-id/1LEj0H_g-jhr7WCtNwaDLaQ4EjziKUqfS/24EN01 - Empirical Methods for the Analysis of the Energy Transition/Practicals/day_1\")\n",
     "df = CSV.read(\"data_spain.csv\", DataFrame)\n",
     "df"
    ]
@@ -446,15 +462,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.2",
+   "display_name": "Julia 1.10.4",
    "language": "julia",
-   "name": "julia-1.9"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.2"
+   "version": "1.10.4"
   }
  },
  "nbformat": 4,
